--- a/Front-End/.env.example
+++ b/Front-End/.env.example
@@ -1,1 +1,9 @@
+# Local development
 VITE_API_URL=http://localhost:5000/api
+
+# Production (Render) - set in Render Dashboard
+# VITE_API_URL=https://wemax-api.onrender.com/api
+
+# Cloudinary (optional, for image uploads)
+# VITE_CLOUDINARY_CLOUD_NAME=your_cloud_name
+# VITE_CLOUDINARY_UPLOAD_PRESET=your_preset
