--- a/render.yaml
+++ b/render.yaml
@@ -6,6 +6,7 @@ services:
   - type: web
     name: wemax-api
     runtime: node
+    plan: free
     rootDir: Back-End
 
     buildCommand: npm install
@@ -38,6 +39,7 @@ services:
   - type: web
     name: wemax-frontend
     runtime: static
+    plan: free
     rootDir: Front-End
 
     buildCommand: npm install && npm run build
