render free tier

--- a/Front-End/.env.example
+++ b/Front-End/.env.example
@@ -1,5 +1,5 @@
 # Local development
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=https://wemax.onrender.com/api
 
 # Production (Render) - set in Render Dashboard
 # VITE_API_URL=https://wemax-api.onrender.com/api
