added ai intergration

--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -34,6 +34,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.17.2",
-    "socket.io": "^4.8.3"
+    "socket.io": "^4.8.3",
+    "node-fetch": "^3.3.2"
   }
 }
